[tool.poetry]
name = "manga-tracker"
version = "0.1.0"
description = ""
authors = ["Allan Gadelha <c.allan.gadelha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
selenium = "^4.20.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src/manga_tracker"
