[tool.poetry]
name = "py-starter-kit"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"

commitlint = "^1.0.0"
commitizen = "^3.27.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src/app"
